# rtl_wer_visualizer

./: Dockerfile  README.md  pyproject.toml  rtl_stt_server.py
service/: rtl_checker_service.py
service/custom/: allowed_replacements_handler.py
static/: index.html  plan.txt  script.js  styles.css
