[tool.poetry]
name = "rtl-stt-evaluator"
version = "0.1.0"
description = ""
authors = ["nirkon <nirk@originai.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jiwer = "^3.0.4"
notebook = "^7.2.2"
python-multipart = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
